syntax = "proto3";

option csharp_namespace = "BusinessMicroservice";


message GetStudentsRequest{
	
}

message GetStudentsResponse{
 repeated StudentMessage students = 1;
}

message StudentMessage{
	string id = 1;
 	string name = 2;
	int32 yearOfBirth =3;
	string address = 4;
}
